--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
       steps:
         - name: Checkout Repo
           uses: actions/checkout@v3
-        -name: Setup Python
+        - name: Setup Python
           uses: actions/setup-python@v4
           with:
             python-version: '3.10'
@@ -14,8 +14,8 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install pyyaml
-        -name: Run Feed Generator
-          run: pythion feed.py
+        - name: Run Feed Generator
+          run: python feed.py
         - name: Push Repo
           run: |
             git config user.name github-actions
